# nomnom

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
nomnom/: __init__.py  cli.py  congress.py  demo_data.py  feeds.py  onchain.py  polymarket.py  recommendations.py  signals.py  web.py
nomnom/templates/: base.html  congress.html  feeds.html  index.html  markets.html  onchain.html
