[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomnom"
version = "0.1.0"
description = "Detect informed money signals in prediction markets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",
    "click>=8.1.0",
    "flask>=3.0.0",
]

[project.scripts]
nomnom = "nomnom.cli:main"

[tool.setuptools.packages.find]
where = ["."]
